Fixing some of the data processing so that it can automatically concat for all, and so that there are no white spaces to throw off the BERTopic section

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ cython_debug/
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/vcs.xml
 /.idea/wolrd_bipolar_day_ama_bertopic.iml
+/run_bertopic/openai_api_key.py
